# rust-rocket-api

./: .env  .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-02-29-091506_create_users/: up.sql
src/: base_schema.rs  main.rs
src/libraries/: db_connection.rs
src/server/: mod.rs  server_router.rs
src/users/: entities.rs  mod.rs  models.rs  user_router.rs
src/utils/: common.rs
