[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["mysql", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = "1.0.197"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
